# KontaktMax

./: .gitignore  CLAUDE.md  convert-icons-puppeteer.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
Doc/: 为第三方开发者提供的 Native Instruments Kontakt 音源库管理生态系统深度解析报告.md  本地Kontakt音源库管理应用的开发者蓝图：系统级集成深度解析.md  核心方法论：直接注册表查询与元数据聚合.md  简介.md  资料.md  通过系统追踪日志取证对Kontakt音色库管理的深度分析报告.md
Kontakt_Button/Data/: Native Access.cmd
Kontakt_Button/Data/KTMGR/: HOT FIX OFF.bat  License OFF.bat  License ON.bat  Readme.txt
Kontakt_Button/Data/Nicnt Maker/: How to Use.txt
Kontakt_Button/Data/parser/: Native_Access_Parser.bat  Native_Access_SNPID.txt  XML_PARSER_Native_Access.ps1
Kontakt_Button/Data/totalcmd/: HISTORY.TXT  TOTALCMD.CHM  license.txt  tcrun64.cfg  wincmd.key
Kontakt_Button/Data/totalcmd/LANGUAGE/: WCMD_CHN.INC  WCMD_CHN.LNG  WCMD_CHN.MNU  WCMD_DAN.LNG  WCMD_DEU.LNG  WCMD_FRA.INC  WCMD_FRA.LNG  (+8 more)
NicntParser/: README.md  nicnt_complete.py
Test/: 40s Very Own - Drums.nicnt
Test/40s Very Own - Drums/: 40s Very Own - Drums.xml
Test/40s Very Own - Drums/Resources/: .PAResources[pipe]_DatabaseResources[pipe]color[pipe]color.db  .PAResources[pipe]_DatabaseResources[pipe]shortname[pipe]shortname.db  .PAResources[pipe]database[pipe]PAL[pipe]categories.db  .db.cache
Test/40s Very Own - Drums_complete/: 40s Very Own - Drums.xml
Test/40s Very Own - Drums_complete/Resources/: .db.cache
src/: main.ts  styles.css
src-tauri/: Cargo.toml  blacklist.json  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+3 files in other folders)
