[package]
name = "kontaktmax"
version = "0.1.0"
description = "KontaktMax"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "kontaktmax_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
tauri-plugin-shell = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.5.0"
auto-launch = "0.5.0"
winreg = "0.52" # Added for Windows Registry access
# We don't need all dependencies from OSC-Bridge, just the essentials for the window
# For simplicity, we will keep them for now to ensure parity, and can clean up later.
which = "6.0.1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.5", features = ["ws"] }
tokio-tungstenite = "0.21.0"
rosc = "0.10.1"
futures-util = "0.3.30"
tokio-util = "0.7.11"
anyhow = "1.0.86"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.2", features = ["cors"] }
url = "2.5.2"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-http = "2.0.0-beta"
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

[features]
custom-protocol = ["tauri/custom-protocol"]
